m2isar_perf/frontends/corePerfDsl/parser_gen/CorePerfDSLParser.py
# Generated from CorePerfDSL.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CorePerfDSLParser ( Parser ):

    grammarFileName = "CorePerfDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ConnectorModel'", "'{'", "','", "'}'", 
                     "'['", "']'", "'('", "'trace'", "':'", "'link'", "'connectorIn'", 
                     "'connectorOut'", "')'", "'config'", "'info-trace'", 
                     "'branch'", "'ResourceModel'", "'Model'", "'Configuration'", 
                     "'TraceValueMapping'", "'TraceValue'", "'MicroactionMapping'", 
                     "'InstrGroup'", "'Architecture'", "'name'", "'isa'", 
                     "'Variant'", "'use'", "'Pipeline'", "'Register'", "'BranchPredictorModel'", 
                     "'explore'", "'assign'", "'Resource'", "'Microaction'", 
                     "'size'", "'flag'", "'ignore'", "'@'", "'->'", "'|'", 
                     "'blocks'", "'Stage'", "'capacity'", "'output-buffer'", 
                     "'Connector'", "'virtual'", "'='", "'with'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'[ALL]'", "'[?]'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "INT", "STRING", "KEYWORD_ALL", 
                      "KEYWORD_REST", "ML_COMMENT", "SL_COMMENT", "WS" ]

    RULE_top = 0
    RULE_corePerfModel_sec = 1
    RULE_externModel_sec = 2
    RULE_instruction_sec = 3
    RULE_connectorModel_def = 4
    RULE_connectorModel = 5
    RULE_connectorModel_attr = 6
    RULE_resourceModel_def = 7
    RULE_resourceModel = 8
    RULE_resourceModel_attr = 9
    RULE_model_def = 10
    RULE_model_list = 11
    RULE_model = 12
    RULE_model_attr = 13
    RULE_configuration_def = 14
    RULE_configuration_list = 15
    RULE_configuration = 16
    RULE_configuration_instance = 17
    RULE_traceValueMapping_def = 18
    RULE_traceValueMapping = 19
    RULE_traceValue_def = 20
    RULE_traceValue = 21
    RULE_microactionMapping_def = 22
    RULE_microactionMapping = 23
    RULE_instrGroup_def = 24
    RULE_instrGroup = 25
    RULE_instrGroup_attr = 26
    RULE_architecture_def = 27
    RULE_architecture = 28
    RULE_variant_def = 29
    RULE_variant_list = 30
    RULE_variant = 31
    RULE_register_def = 32
    RULE_register_list = 33
    RULE_register = 34
    RULE_registerFlag = 35
    RULE_registerConnectorMapping = 36
    RULE_pipeline_def = 37
    RULE_pipeline_list = 38
    RULE_pipeline = 39
    RULE_pipeline_sequential = 40
    RULE_pipeline_parallel = 41
    RULE_pipeline_attr = 42
    RULE_stage_def = 43
    RULE_stage_list = 44
    RULE_stage = 45
    RULE_stage_attr = 46
    RULE_microaction_def = 47
    RULE_microaction_list = 48
    RULE_microaction = 49
    RULE_microactionComponent = 50
    RULE_microactionComponent_list = 51
    RULE_connector_def = 52
    RULE_connector = 53
    RULE_resource_def = 54
    RULE_resource_list = 55
    RULE_resource = 56
    RULE_virtual_def = 57
    RULE_resource_assign = 58
    RULE_microaction_assign = 59
    RULE_traceValue_assign = 60
    RULE_configuration_assign = 61
    RULE_connector_ref = 62
    RULE_traceValue_ref = 63
    RULE_resourceModel_ref = 64
    RULE_connectorModel_ref = 65
    RULE_configuration_ref = 66
    RULE_model_ref = 67
    RULE_branchPredictorModel_ref = 68
    RULE_resource_ref = 69
    RULE_resourceOrConnector_ref = 70
    RULE_microaction_ref = 71
    RULE_instructionOrInstrGroup_ref = 72
    RULE_stage_ref = 73
    RULE_pipeline_ref = 74
    RULE_register_ref = 75
    RULE_microactionOrPipeline_ref = 76
    RULE_stageOrPipeline_ref = 77

    ruleNames =  [ "top", "corePerfModel_sec", "externModel_sec", "instruction_sec", 
                   "connectorModel_def", "connectorModel", "connectorModel_attr", 
                   "resourceModel_def", "resourceModel", "resourceModel_attr", 
                   "model_def", "model_list", "model", "model_attr", "configuration_def", 
                   "configuration_list", "configuration", "configuration_instance", 
                   "traceValueMapping_def", "traceValueMapping", "traceValue_def", 
                   "traceValue", "microactionMapping_def", "microactionMapping", 
                   "instrGroup_def", "instrGroup", "instrGroup_attr", "architecture_def", 
                   "architecture", "variant_def", "variant_list", "variant", 
                   "register_def", "register_list", "register", "registerFlag", 
                   "registerConnectorMapping", "pipeline_def", "pipeline_list", 
                   "pipeline", "pipeline_sequential", "pipeline_parallel", 
                   "pipeline_attr", "stage_def", "stage_list", "stage", 
                   "stage_attr", "microaction_def", "microaction_list", 
                   "microaction", "microactionComponent", "microactionComponent_list", 
                   "connector_def", "connector", "resource_def", "resource_list", 
                   "resource", "virtual_def", "resource_assign", "microaction_assign", 
                   "traceValue_assign", "configuration_assign", "connector_ref", 
                   "traceValue_ref", "resourceModel_ref", "connectorModel_ref", 
                   "configuration_ref", "model_ref", "branchPredictorModel_ref", 
                   "resource_ref", "resourceOrConnector_ref", "microaction_ref", 
                   "instructionOrInstrGroup_ref", "stage_ref", "pipeline_ref", 
                   "register_ref", "microactionOrPipeline_ref", "stageOrPipeline_ref" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    ID=50
    INT=51
    STRING=52
    KEYWORD_ALL=53
    KEYWORD_REST=54
    ML_COMMENT=55
    SL_COMMENT=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CorePerfDSLParser.EOF, 0)

        def corePerfModel_sec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.CorePerfModel_secContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.CorePerfModel_secContext,i)


        def externModel_sec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.ExternModel_secContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.ExternModel_secContext,i)


        def instruction_sec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.Instruction_secContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.Instruction_secContext,i)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_top

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop" ):
                listener.enterTop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop" ):
                listener.exitTop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTop" ):
                return visitor.visitTop(self)
            else:
                return visitor.visitChildren(self)




    def top(self):

        localctx = CorePerfDSLParser.TopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_top)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CorePerfDSLParser.T__0) | (1 << CorePerfDSLParser.T__16) | (1 << CorePerfDSLParser.T__17) | (1 << CorePerfDSLParser.T__18) | (1 << CorePerfDSLParser.T__19) | (1 << CorePerfDSLParser.T__20) | (1 << CorePerfDSLParser.T__21) | (1 << CorePerfDSLParser.T__22) | (1 << CorePerfDSLParser.T__23) | (1 << CorePerfDSLParser.T__26) | (1 << CorePerfDSLParser.T__28) | (1 << CorePerfDSLParser.T__29) | (1 << CorePerfDSLParser.T__33) | (1 << CorePerfDSLParser.T__34) | (1 << CorePerfDSLParser.T__42) | (1 << CorePerfDSLParser.T__45) | (1 << CorePerfDSLParser.T__46))) != 0):
                self.state = 159
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CorePerfDSLParser.T__23, CorePerfDSLParser.T__26, CorePerfDSLParser.T__28, CorePerfDSLParser.T__29, CorePerfDSLParser.T__33, CorePerfDSLParser.T__34, CorePerfDSLParser.T__42, CorePerfDSLParser.T__45, CorePerfDSLParser.T__46]:
                    self.state = 156
                    self.corePerfModel_sec()
                    pass
                elif token in [CorePerfDSLParser.T__0, CorePerfDSLParser.T__16, CorePerfDSLParser.T__17, CorePerfDSLParser.T__18, CorePerfDSLParser.T__20]:
                    self.state = 157
                    self.externModel_sec()
                    pass
                elif token in [CorePerfDSLParser.T__19, CorePerfDSLParser.T__21, CorePerfDSLParser.T__22]:
                    self.state = 158
                    self.instruction_sec()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.match(CorePerfDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorePerfModel_secContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def virtual_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Virtual_defContext,0)


        def connector_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Connector_defContext,0)


        def resource_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Resource_defContext,0)


        def microaction_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Microaction_defContext,0)


        def stage_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Stage_defContext,0)


        def pipeline_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Pipeline_defContext,0)


        def register_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Register_defContext,0)


        def variant_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Variant_defContext,0)


        def architecture_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Architecture_defContext,0)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_corePerfModel_sec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorePerfModel_sec" ):
                listener.enterCorePerfModel_sec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorePerfModel_sec" ):
                listener.exitCorePerfModel_sec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCorePerfModel_sec" ):
                return visitor.visitCorePerfModel_sec(self)
            else:
                return visitor.visitChildren(self)




    def corePerfModel_sec(self):

        localctx = CorePerfDSLParser.CorePerfModel_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_corePerfModel_sec)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.T__46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.virtual_def()
                pass
            elif token in [CorePerfDSLParser.T__45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.connector_def()
                pass
            elif token in [CorePerfDSLParser.T__33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.resource_def()
                pass
            elif token in [CorePerfDSLParser.T__34]:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.microaction_def()
                pass
            elif token in [CorePerfDSLParser.T__42]:
                self.enterOuterAlt(localctx, 5)
                self.state = 170
                self.stage_def()
                pass
            elif token in [CorePerfDSLParser.T__28]:
                self.enterOuterAlt(localctx, 6)
                self.state = 171
                self.pipeline_def()
                pass
            elif token in [CorePerfDSLParser.T__29]:
                self.enterOuterAlt(localctx, 7)
                self.state = 172
                self.register_def()
                pass
            elif token in [CorePerfDSLParser.T__26]:
                self.enterOuterAlt(localctx, 8)
                self.state = 173
                self.variant_def()
                pass
            elif token in [CorePerfDSLParser.T__23]:
                self.enterOuterAlt(localctx, 9)
                self.state = 174
                self.architecture_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternModel_secContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def traceValue_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.TraceValue_defContext,0)


        def connectorModel_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.ConnectorModel_defContext,0)


        def resourceModel_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.ResourceModel_defContext,0)


        def model_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Model_defContext,0)


        def configuration_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Configuration_defContext,0)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_externModel_sec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternModel_sec" ):
                listener.enterExternModel_sec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternModel_sec" ):
                listener.exitExternModel_sec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternModel_sec" ):
                return visitor.visitExternModel_sec(self)
            else:
                return visitor.visitChildren(self)




    def externModel_sec(self):

        localctx = CorePerfDSLParser.ExternModel_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_externModel_sec)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.T__20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.traceValue_def()
                pass
            elif token in [CorePerfDSLParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.connectorModel_def()
                pass
            elif token in [CorePerfDSLParser.T__16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.resourceModel_def()
                pass
            elif token in [CorePerfDSLParser.T__17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 180
                self.model_def()
                pass
            elif token in [CorePerfDSLParser.T__18]:
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.configuration_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instruction_secContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrGroup_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.InstrGroup_defContext,0)


        def microactionMapping_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.MicroactionMapping_defContext,0)


        def traceValueMapping_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.TraceValueMapping_defContext,0)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_instruction_sec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction_sec" ):
                listener.enterInstruction_sec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction_sec" ):
                listener.exitInstruction_sec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction_sec" ):
                return visitor.visitInstruction_sec(self)
            else:
                return visitor.visitChildren(self)




    def instruction_sec(self):

        localctx = CorePerfDSLParser.Instruction_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction_sec)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.T__22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.instrGroup_def()
                pass
            elif token in [CorePerfDSLParser.T__21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.microactionMapping_def()
                pass
            elif token in [CorePerfDSLParser.T__19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.traceValueMapping_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectorModel_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connectorModel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.ConnectorModelContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.ConnectorModelContext,i)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_connectorModel_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnectorModel_def" ):
                listener.enterConnectorModel_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnectorModel_def" ):
                listener.exitConnectorModel_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnectorModel_def" ):
                return visitor.visitConnectorModel_def(self)
            else:
                return visitor.visitChildren(self)




    def connectorModel_def(self):

        localctx = CorePerfDSLParser.ConnectorModel_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_connectorModel_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(CorePerfDSLParser.T__0)
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.ID]:
                self.state = 190
                self.connectorModel()
                pass
            elif token in [CorePerfDSLParser.T__1]:
                self.state = 191
                self.match(CorePerfDSLParser.T__1)
                self.state = 192
                self.connectorModel()
                self.state = 197
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CorePerfDSLParser.T__2:
                    self.state = 193
                    self.match(CorePerfDSLParser.T__2)
                    self.state = 194
                    self.connectorModel()
                    self.state = 199
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 200
                self.match(CorePerfDSLParser.T__3)
                pass
            else:
                raise NoViableAltException(self)
